<resources>
    <string name="app_name">SamFix</string>
    <string name="app_desc">Fix all annoying things on Samsung!</string>

    <string name="tips_title">Need Permission!</string>
    <string name="tips_ok">OK</string>
    <string name="tips_copy">COPY</string>
    <string name="copy_done">Copy Success</string>
    <string name="tips">You need to use adb tools to grant permission, copy below command and exec it on a PC:\n\n%1$s\n\n</string>
    <string name="root_failure">root permission not granted</string>

    <string name="toggle_settings">Toggle Settings</string>

    <string name="greyscale">Greyscale</string>
    <string name="greyscale_description">Turn on black and white mode</string>

    <string name="max_volume">Max Volume </string>
    <string name="max_volume_description">Disable max volume warning</string>

    <string name="max_brightness">Max Brightness</string>
    <string name="max_brightness_description">Disable max brightness warning</string>

    <string name="animation_scale">Animation Scale</string>
    <string name="animation_scale_description">Change animation scale to .25</string>


    <string name="support">Support</string>
    <string name="donate">Support Development</string>
    <string name="donate_description">Show your support and enable all options</string>

    <string name="rate">Rate App</string>
    <string name="rate_description">Happy with the app? Give us 5 star review</string>

    <string name="mail">Send Email</string>
    <string name="mail_description">Bugs? Feature request? Send us an email</string>

    <string name="thank_you">Thank you for supporting!</string>
    <string name="next_time">Appreciate your intention. Next time perhaps!</string>

    <string name="animation_off">Animation off</string>
    <string name="animation_scale_1_4x">Animation scale 0.25x</string>
    <string name="animation_scale_0_5x">Animation scale .5x</string>
    <string name="animation_scale_1x">Animation scale 1x</string>
    <string name="animation_scale_1_5x">Animation scale 1.5x</string>
    <string name="animation_scale_2x">Animation scale 2x</string>
    <string name="animation_scale_5x">Animation scale 5x</string>
    <string name="animation_scale_10x">Animation scale 10x</string>
    <string name="animator_duration">Animator duration</string>

    <string name="backup">App Backup</string>
    <string name="backup_description">Automatically backup newly installed apps</string>

    <string name="bt_popup">No Bluetooth popup</string>
    <string name="bt_popup_description">Disable popup on bluetooth</string>

    <string name="wifi_popup">No Wifi popup</string>
    <string name="wifi_popup_description">Disable popup on wifi</string>

    <string name="sync_popup">No Sync popup</string>
    <string name="sync_popup_description">Disable popup on auto sync</string>


    <string name="location_popup">No location dialog</string>
    <string name="location_popup_description">Disable location dialog in GM</string>

    <string name="accessibility">turn on \'SamFix\' in settings > accessibility</string>

    <string name="storage">backus are located in backups/apps</string>
    <string name="restart">Needs device restart</string>
    <string name="accessibility_service_description">Samfix uses accessibility service to provide an easy way to get rid of annoying windows and popups. No data is collected whatsoever!</string>

    <string name="mobile_data">Mobile data</string>
    <string name="data">Toggle data</string>
    <string name="data_description">toggle data directly from quick settings tile</string>

    <string name="samfix_brightness_broadcast_intent">com.dharmapoudel.samfix.Brightness</string>
    <string name="pro_app_filter_action">com.dharmapoudel.proapp.action.PREMIUM_CHECK</string>
    <string name="samfix_filter_action">com.dharmapoudel.samfix.action.PREMIUM_CHECK</string>

    <string name="toast_unlicensed">Failed to verify license check</string>
    <string name="toast_licensed">License verified successfully.</string>

</resources>
